# MontePy

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AUTHORS  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  NOTICE.txt  README.md  SURFACE_METACLASS_README.md  developing.html  index.html  json_test.py  pyproject.toml  pytest.ini  setup.py  starting.html  surface_metaclass_prototype.py  test.py  test_metaclass.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check_sitemap.py  check_version.py  check_version.sh  copy_url_diff.py  deploy.sh
.github/workflows/: deploy-alpha.yml  deploy.yml  main.yml  rtd_link.yml
benchmark/: benchmark_big_model.py  benchmark_big_model_parallel.py  benchmark_big_model_serial.py  big_model.imcnp  constants.py  exp_growth.py  foo.imcnp  model_builder.py
demo/: 0_IntroToMontePy.ipynb  0_IntroToMontePy_ANS_studen_26.ipynb  1_PinCellCorrection.ipynb  1_PinCellCorrection_inter.ipynb  1_fusion_radial_build.ipynb  2_BuildAssembly.ipynb  2_BuildAssembly_inter.ipynb  3_AddingGuideTubes.ipynb  3_AddingGuideTubes_inter.ipynb  4_AxialDiscretize_inter.ipynb  5_AdapterSegue.ipynb  Pin_cell.ipynb  _config.py  investigating_importance.ipynb  jupyter_conda_env.txt  pin_cell.imcnp  rise.css
demo/answers/: 1_PinCellCorrection.ipynb  1_fusion_radial_build.ipynb  2_BuildAssembly.ipynb  3_AddingGuideTubes.ipynb  4_AxialDiscretize.ipynb  _config.py
demo/models/: fusion_tokomak.imcnp  oops_all_pins_ans.imcnp  pin_cell.imcnp  pin_cell_corrected_ans.imcnp  w17_17_full_height_ans.imcnp  w17_17_k_inf_ans.imcnp
demo/workshops/: ANS_student_26.ipynb  MC_2025_intro.ipynb
doc/: Makefile  foo.imcnp
doc/source/: _test_for_missing_docs.py  bugs.rst  changelog.rst  conf.py  dev_checklist.rst  dev_standards.rst  dev_tree.rst  developing.rst  environment.yml  faq.rst  foo.imcnp  index.rst  jupyter_lite.json  jupyter_lite_config.json  migrate0_1.rst  performance.rst  publications.rst  robots.txt  scope.rst  starting.rst  tricks.rst  users.rst  utilities.rst
graphics/: ascii.txt
inst/: paper.bib  paper.md
mcnpy/: __init__.py  __main__.py  _cell_data_control.py  cell.py  cell_data_control.py  cells.py  collections.py  data_card.py  errors.py  foo  geometry_operators.py  inputReader.py  isotope.py  material.py  material_component.py  materials.py  mcnp_card.py  mcnp_input.py  mcnp_object.py  mcnp_problem.py  num_limits.py  numbered_mcnp_card.py  numbered_object_collection.py  particle.py  simple.imcnp  surface.py  surface_collection.py  surface_type.py  transforms.py  universe.py  universes.py  utilities.py
mcnpy/data_cards/: __init__.py  cell_modifier.py  data_card.py  data_parser.py  element.py  fill.py  importance.py  isotope.py  lattice.py  lattice_card.py  material.py  material_component.py  mode.py  thermal_scattering.py  transform.py  universe_card.py  volume.py
mcnpy/data_inputs/: __init__.py  cell_modifier.py  data_input.py  data_parser.py  element.py  fill.py  importance.py  isotope.py  lattice_input.py  material.py  material_component.py  mode.py  tally.py  tally_multiplier.py  thermal_scattering.py  transform.py  universe_input.py  volume.py
mcnpy/input_parser/: __init__.py  block_type.py  cell_parser.py  constants.py  data_parser.py  inputReader.py  input_file.py  input_reader.py  input_syntax_reader.py  line_length.py  material_parser.py  mcnp_input.py  mode_parser.py  node_parser.py  parser_base.py  read_parser.py  semantic_node.py  shortcuts.py  surface_parser.py  syntax_node.py  tally_parser.py  thermal_parser.py  tokens.py
mcnpy/surfaces/: __init__.py  axis_plane.py  cylinder_on_axis.py  cylinder_par_axis.py  general_plane.py  half_space.py  surface.py  surface_builder.py  surface_type.py
montepy/: __init__.py  __main__.py  _cell_data_control.py  _check_value.py  _exception_context.py  _singleton.py  cell.py  cells.py  constants.py  errors.py  exceptions.py  geometry_operators.py  json.py  materials.py  mcnp_card.py  mcnp_object.py  mcnp_problem.py  meta.yaml  numbered_mcnp_card.py  numbered_mcnp_object.py  numbered_object_collection.py  particle.py  surface_collection.py  tallies.py  transforms.py  types.py  universe.py  universes.py  utilities.py
montepy/_abc/: cow.py  mcnp_object.py  numbered_mcnp_object.py  numbered_object_collection.py
montepy/_scripts/: change_to_ascii.py
montepy/data_cards/: __init__.py  cell_modifier.py  data_card.py  data_parser.py  element.py  fill.py  importance.py  isotope.py  lattice_card.py  material.py  material_component.py  mode.py  thermal_scattering.py  transform.py  universe_card.py  volume.py
montepy/data_inputs/: __init__.py  cell_modifier.py  data_input.py  data_parser.py  element.py  fill.py  importance.py  isotope.py  lattice.py  lattice_input.py  material.py  material_component.py  mode.py  nuclide.py  source_def.py  tally.py  tally_group.py  tally_multiplier.py  tally_segment.py  tally_type.py  thermal_scattering.py  transform.py  universe_input.py  volume.py
paper/: paper.bib  paper.md
prof/: dump_results.py  profile_big_model.py
requirements/: common.txt  dev.txt
scripts/: change_to_ascii.py
src/: lib.rs  main.rs  syntax_node.rs
templates/: install.yml  test.yml
tests/: conftest.py  constants.py  testCellProblem.py  testSyntaxParsing.py  testUtilities.py  test_cell_problem.py  test_check_annote.py  test_check_value.py  test_data_cards.py  test_data_inputs.py  test_edge_cases.py  test_errors.py  test_geom_integration.py  test_geometry.py  test_importance.py  test_importance_integration.py  test_input_file.py  test_integration.py  test_interface.py  test_issue_736.py  test_main.py  test_material.py  test_mcnp_problem.py  test_mode.py  test_nuclide.py  test_numbered_collection.py  test_numbers.py  test_scripts.py  test_source.py  test_source_def.py  test_surfaces.py  test_syntax_parsing.py  test_tally.py  test_transform.py  test_universe.py  test_universe_integration.py  test_universe_nullify.py  test_utilities.py  test_version.py
(+224 files in other folders)
