[project]
name = "montepy"
dynamic = ["version"]
description = "A library for reading, editing, and writing MCNP input files"

# gitlab limits the readme to 4,000 chars.
readme = "README.md"
requires-python = ">=3.8"
maintainers = [
	{name = "Micah Gale", email = "mgale@montepy.org"}
]
authors = [
	{name = "Micah Gale", email = "mgale@montepy.org"},
	{name = "Travis Labossiere-Hickman", email = "Travis.LabossiereHickman@inl.gov"},
	{name = "Brenna Carbno", email="brenna.carbno@inl.gov"}
]
keywords = ["MCNP", "neutronics", "imcnp", "input file", "monte carlo", "radiation transport"]
license = {file="LICENSE"}
classifiers = [
       "Development Status :: 4 - Beta",
       "Programming Language :: Python :: 3 :: Only",
       "Intended Audience :: Science/Research",
       "Intended Audience :: Developers",
       "License :: OSI Approved :: MIT License",
       "Natural Language :: English",
       "Operating System :: OS Independent",
       "Topic :: Scientific/Engineering :: Physics",
       "Topic :: Scientific/Engineering",
       "Topic :: Scientific/Engineering :: Human Machine Interfaces",

]
dependencies = [
	"numpy>=1.18",
	"sly==0.5"
]

[project.optional-dependencies]
test = ["coverage[toml]>=6.3.2", "pytest"]
# This is needed for a sphinx bug. See #414.
doc = ["sphinx>=7.4.0", "sphinxcontrib-apidoc", "sphinx_rtd_theme"]
format = ["black>=23.3.0"]
build = [
	"build",
	"setuptools>=64.0.0",
	"setuptools-scm>=8",
]
develop = [
	"montepy[test]",
	"montepy[doc]",
	"montepy[format]",
	"montepy[build]",
]


[project.urls]
Homepage = "https://www.montepy.org/"
Repository = "https://github.com/idaholab/montepy.git"
Documentation = "https://idaholab.github.io/MontePy/index.html"
"Bug Tracker" = "https://github.com/idaholab/MontePy/issues"

[project.scripts]
"change_to_ascii" = "montepy._scripts.change_to_ascii:main"

[build-system]
requires = ["setuptools>=64.0.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "montepy/_version.py"

[tool.setuptools.packages.find]
include = ["montepy*"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 90.0
exclude_also = [
	"\\s+@abstractmethod\\s*",
	"pass",
]

[tool.pytest.ini_options]
minversion = "6.0"
junit_logging = "all"
junit_family="xunit2"
filterwarnings="error"
