[project]
name = "montepy"
dynamic = ["version"]
description = "A library for reading, editing, and writing MCNP input files"

# gitlab limits the readme to 4,000 chars.
readme = "README.md"
requires-python = ">=3.9"
maintainers = [
	{name = "Micah Gale", email = "mgale@montepy.org"}
]
authors = [
	{name = "Micah Gale", email = "mgale@montepy.org"},
	{name = "Travis Labossiere-Hickman", email = "Travis.LabossiereHickman@inl.gov"},
	{name = "Brenna Carbno", email="brenna.carbno@inl.gov"},
	{name = "Benjaminas Marcinkevicius", email="BenjaminasDev@outlook.com"},
	{name = "Paul Ferney", email="Paul.Ferney@inl.gov"},
	{name = "Vikranth Udandarao", email="vikranth22570@iiitd.ac.in"},
]
keywords = ["MCNP", "neutronics", "imcnp", "input file", "monte carlo", "radiation transport"]
license = "MIT"
license-files = ["LICENSE", "AUTHORS"]
classifiers = [
       "Development Status :: 4 - Beta",
       "Intended Audience :: Science/Research",
       "Intended Audience :: Developers",
       "Natural Language :: English",
       "Operating System :: OS Independent",
       "Topic :: Scientific/Engineering :: Physics",
       "Topic :: Scientific/Engineering",
       "Topic :: Scientific/Engineering :: Human Machine Interfaces",
       "Programming Language :: Python :: 3 :: Only",
       "Programming Language :: Python :: 3.9",
       "Programming Language :: Python :: 3.10",
       "Programming Language :: Python :: 3.11",
       "Programming Language :: Python :: 3.12",
       "Programming Language :: Python :: 3.13"
]
dependencies = [
	"numpy>=1.18",
	"sly>= 0.4, <=0.5"
]

[project.optional-dependencies]
test = [
	"coverage[toml]>=6.3.2", 
	"hypothesis",
	"pytest", 
	"pytest-profiling",
	"montepy[build]",
	"phmutest",
]
# This is needed for a sphinx bug. See #414.
doc = [
	"sphinx>=7.4.0", 
	"sphinxcontrib-apidoc", 
	"pydata_sphinx_theme",
	"sphinx-favicon",
	"sphinx-copybutton",
    	"sphinx_autodoc_typehints",
	"autodocsumm",
]
format = ["black~=25.1"]
build = [
	"build",
	"setuptools>=64.0.0",
	"setuptools-scm>=8",
]
develop = [
	"montepy[test,doc,format]",
]
demos = ["jupyter"]
demo-test = ["montepy[demos]", "papermill"]

demo-present = ["montepy[demos]", "jupyterlab-rise"]


[project.urls]
Homepage = "https://www.montepy.org/"
Repository = "https://github.com/idaholab/MontePy.git"
Documentation = "https://www.montepy.org/"
"Bug Tracker" = "https://github.com/idaholab/MontePy/issues"
Changelog = "https://www.montepy.org/en/stable/changelog.html"

[project.scripts]
"change_to_ascii" = "montepy._scripts.change_to_ascii:main"

[build-system]
requires = ["setuptools>=77.0.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "montepy/_version.py"

[tool.setuptools.packages.find]
include = ["montepy*"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 90.0
exclude_also = [
	"\\s+@abstractmethod\\s*",
	"pass",
]

[tool.pytest.ini_options]
minversion = "6.0"
junit_logging = "all"
junit_family="xunit2"
filterwarnings="error"
testpaths = ["tests"]
